[test framework] convenient method for enabling debug logging in tests
GitOrigin-RevId: 51cde493fcb9744feaa77d70d9ddc2b0cd1d2b6d